# uni_slam

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_dawn.sh  build_gtsam.sh  build_pangolin.sh  main.cpp  perf_08-06-2026_17-01-51.yaml  present_and_run.sh  run.sh  uniwslam_map.json  uniwslam_map.ply  viz.cpp  viz.hpp
.claude/hooks/: protect-git-paths.sh
.github/scripts/python_wheels/: cibw_before_all.sh
.github/workflows/: prod-cibw.yml
base/: CMakeLists.txt  anybag.hpp  assert.hpp  unique_any.hpp
benchmarks/: ACCURACY_ANALYSIS.md  HOWTO_REEVALUATE.md  README.md  build_orbslam3.sh  compare.py  run_orbslam3_euroc.sh
benchmarks/ORB_SLAM3/: CMakeLists.txt
cmake/: HandleBoost.cmake  configureDependencies.cmake
compute/: CMakeLists.txt  awaiter.cpp  awaiter.hpp  compute.cpp  compute.hpp  gpu.cpp  gpu.hpp  pass.cpp  pass.hpp  pass_hellowgsl.cpp  pass_hellowgsl.hpp  performance.cpp  performance.hpp  stage.cpp  stage.hpp
compute/include/compute/: compute.hpp  gpu.hpp  gpu_stage.hpp  pass.hpp  performance.hpp  stage.hpp
compute/src/: awaiter.cpp  compute.cpp  gpu.cpp  gpu_stage.cpp  pass.cpp  performance.cpp  stage.cpp
compute/tests/: CMakeLists.txt  stage_tests.cpp
data/: CMakeLists.txt  euroc_provider.cpp  euroc_provider.hpp  provider_base.cpp  provider_base.hpp  tum_provider.cpp  tum_provider.hpp
data/include/data/: euroc_provider.hpp
data/src/: euroc_provider.cpp  provider_base.cpp
gtsam_unstable/linear/tests/: testLinearEquality.cpp
presentor/: .gitignore  README.md  pyproject.toml
presentor/src/presenter/: __init__.py  __main__.py  loader.py  types.py  viewer.py
python/: setup.py.in
resources/: create_pyramid.wgsl  cull_corners.wgsl  detect_corners.wgsl  generate_features.wgsl  hello.wgsl
wslam/: CMakeLists.txt  brief_tests.inc  common.cpp  common.hpp  cull_corners.cpp  cull_corners.hpp  detect_corners.cpp  detect_corners.hpp  export.cpp  export.hpp  factor_builder.cpp  factor_builder.hpp  feature_detect.cpp  feature_detect.hpp  fill_pyramid.cpp  fill_pyramid.hpp  generate_features.cpp  generate_features.hpp  isam2_update.cpp  isam2_update.hpp  isam2_worker.cpp  isam2_worker.hpp  keyframe_gate.cpp  keyframe_gate.hpp  load_features_cpu.cpp  load_features_cpu.hpp  map_build_factors.cpp  map_build_factors.hpp  map_common.hpp  map_filter_keyframe.cpp  map_filter_keyframe.hpp  map_helpers_lods.hpp  map_shared.hpp  map_submit_updates.cpp  map_submit_updates.hpp  mapping.cpp  mapping.hpp  mapping_state.hpp  match_features_cpu.cpp  match_features_cpu.hpp  (+17 more)
wslam/include/wslam/: common.hpp  wslam.hpp
wslam/src/: common.cpp  export.cpp  mapping_state.hpp  models.hpp  wslam.cpp
wslam/src/feature_detect/: brief_tests.inc  cull_corners.cpp  cull_corners.hpp  detect_corners.cpp  detect_corners.hpp  feature_detect.cpp  feature_detect.hpp  fill_pyramid.hpp  generate_features.cpp  generate_features.hpp  sensor_loader.cpp  sensor_loader.hpp
wslam/src/map/: factor_builder.cpp  factor_builder.hpp  isam2_update.hpp  isam2_worker.cpp  isam2_worker.hpp  keyframe_gate.cpp  keyframe_gate.hpp  map_build_factors.cpp  map_build_factors.hpp  map_common.hpp  map_filter_keyframe.cpp  map_filter_keyframe.hpp  map_helpers_lods.hpp  map_stage.cpp  map_submit_updates.cpp  map_submit_updates.hpp  mapping.cpp  mapping.hpp
wslam/src/pose_estimate_cpu/: load_features_cpu.cpp  load_features_cpu.hpp  match_features_cpu.cpp  match_features_cpu.hpp  pose_estimate_cpu.cpp  pose_estimate_cpu.hpp  ransac_cpu.cpp  ransac_cpu.hpp  triangulate_cpu.cpp  triangulate_cpu.hpp
wslam/src/viz/: viz.cpp  viz.hpp  vizualize_data.cpp  vizualize_data.hpp
